--- a/todo
+++ b/todo
@@ -12,7 +12,8 @@ TODO live Preview
 |----------------------------------------------------------------------|
 SASS Tree stuff
 |----------------------------------------------------------------------|
-TODO fix icons
+TODO fix sidebar icon
+TODO fix missing icons
 §? add replace from selection 
 |----------------------------------------------------------------------|
 SASS Abbreviations
